<resources>
    <string name="app_name">battery</string>
    <string name="title_home">Home</string>
    <string name="title_recom">추천</string>
    <string name="title_category">카테고리</string>
    <string name="title_dashboard">영양관리</string>
    <string name="title_notifications">더보기</string>

    <string name="passwords_check">암호를 다시 확인 하여 주시기 바랍니다.</string>
    <string name="email_valid_check">이메일을 확인하여 주시기 바랍니다.</string>
    <string name="progress_wait">기다려 주시기 바랍니다.</string>
    <string name="text_password_updated_alert">비밀번호가 초기화되었습니다. 새 비밀번호로 로그인을 하여 주시기 바랍니다.</string>
    <string name="text_code_sent_alert">재설정 코드가 이메일 %1$s 코드가 전송 되었습니다. 아래 코드를 입력하십시오.</string>
    <string name="text_code_resent_alert">새로운 코드가 전송되었습니다.</string>
    <string name="invalid_email">잘못된 이메일입니다.</string>
    <string name="empty_first_name">이름은 비워 둘 수 없습니다</string>
    <string name="empty_last_name">성은 비워 둘 수 없습니다</string>
    <string name="password_length">비밀번호는 8 자 이상이어야합니다</string>

    <string name="empty_description">가능한 설명이 없습니다.</string>

    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="first_name">이름</string>
    <string name="last_name">성</string>

    <string name="text_login"><u>이미 회원이십니까? 로그인 하기</u></string>
    <string name="text_signup_or"><u>아직 등록하지 않으셨습니까? 새 계정을 만들기</u></string>
    <string name="text_back_to_login"><u>로그인으로 돌아 가기</u></string>
    <string name="text_forgot_password"><u>비밀번호를 잊으 셨나요? 재설정하려면 여기를 클릭하십시오.</u></string>
    <string name="text_resend_code"><u>코드를 얻지 못했습니까? 코드를 다시 보내십시오.</u></string>

    <string name="submit">제출</string>
    <string name="confirm">확인</string>

    <!--    fireBase  start -->
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <!--    fireBase end -->

    <string name="facebook_app_id">1108602389477051</string>
    <string name="fb_login_protocol_scheme">7244065fb8d79ceb2d65987bac5f5dce</string>

</resources>
