<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_recom"
        android:icon="@drawable/ic_battery_alert_black_24dp"
        android:title="@string/title_recom"/>

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_format_align_left_black_24dp"
        android:title="@string/title_category"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_more_black_24dp"
        android:title="@string/title_notifications"/>

</menu>
